# pdf-translator

./: .gitignore  IMPROVEMENT_PLAN.md  README.md  pyproject.toml  setup_fonts.sh
src/pdf_translator/: cli.py  parser.py  renderer.py  translator.py
