[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10",
    "PyMuPDF>=1.24",
    "reportlab>=4.0",
    "boto3>=1.34",
]

[project.scripts]
pdf-translate = "pdf_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
